compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_record.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype A {\n    One\n    Two\n    3\n}\n"
---
----- SOURCE CODE

type A {
    One
    Two
    3
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:5:5
  │
5 │     3
  │     ^ I was not expecting this

Found an Int, expected one of: 
- `}`
- a record constructor
